--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,1 +1,8 @@
-# This file is intentionally empty. Message look-ups will fall back to the default "messages.properties" file.
+welcome=우리 대학교에 오신 것을 환영합니다.
+required=is required
+notFound=has not been found
+duplicate=is already in use
+nonNumeric=must be all numeric
+duplicateFormSubmission=Duplicate form submission is not allowed
+typeMismatch.date=invalid date
+typeMismatch.birthDate=invalid date
