메시지 파일명 변경함.

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=우리 대학교에 오신 것을 환영합니다.
+welcome=\uC6B0\uB9AC \uB300\uD559\uAD50\uC5D0 \uC624\uC2E0 \uAC83\uC744 \uD658\uC601\uD569\uB2C8\uB2E4.
 required=is required
 notFound=has not been found
 duplicate=is already in use
